{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 32,
  "lineage": "cd7d0a4b-305b-f870-70cf-bd4962dce765",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-05T04:38:25.331-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/personal-409116/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/personal-409116/global/networks/wordle-network",
            "priority": 1000,
            "project": "personal-409116",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personal-409116/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.wordle_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-05T04:38:25.790-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/personal-409116/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/personal-409116/global/networks/wordle-network",
            "priority": 1000,
            "project": "personal-409116",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personal-409116/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.wordle_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250430",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/personal-409116/zones/us-central1-a/disks/db-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/personal-409116/zones/us-central1-a/instances/db-server",
            "instance_id": "7181089599987116",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDef/WHSQrQtJYkpAB+gK+dJBrL0sQ9/7fPvPuMiR5AMAM2lxcajNkphTMPHCa5RRvRr/n7bQ7EvdaNu3m+LYC3rpZ1Pq1a57ZgdHVlv4hrm9N8/FcWz7ZIY0edZV54Q5s1v4fAIoVJ8wxAt5GiBIaPLZ0XAhDtHH/mXKo3zdEST3BqULIoWvFkexaUkI5MLtIdnF5z7nGJWOUwHfJCgc+zeT/3RW65Jt+boSE0SbeZ5apgDNtudCmtQrCom8SfqmDHmC4xcnxLNOdfMN5p1z4+UF+AHEUM6V7tTEUisZMqJDMUSiv95VWdrqfckUDhJz3luXH42X8ukyMCcYGVfhl6r5pjK6pEdbWjHNPlpMVBs97jmljLuv7taj1WvOWumwM2Je1ZJCNOaIdMiMzd/VXF8l+sEn4gO9jEVskI5BY06q [...]
            },
            "metadata_fingerprint": "QqM0M_Jxyn8=",
            "name": "db-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.56.85.57",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/personal-409116/global/networks/wordle-network",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/personal-409116/regions/us-central1/subnetworks/wordle-subnet",
                "subnetwork_project": "personal-409116"
              }
            ],
            "project": "personal-409116",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/personal-409116/zones/us-central1-a/instances/db-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.wordle_network",
            "google_compute_subnetwork.wordle_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250430",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/personal-409116/zones/us-central1-a/disks/web-server-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/personal-409116/zones/us-central1-a/instances/web-server-1",
            "instance_id": "5292931498938539437",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDef/WHSQrQtJYkpAB+gK+dJBrL0sQ9/7fPvPuMiR5AMAM2lxcajNkphTMPHCa5RRvRr/n7bQ7EvdaNu3m+LYC3rpZ1Pq1a57ZgdHVlv4hrm9N8/FcWz7ZIY0edZV54Q5s1v4fAIoVJ8wxAt5GiBIaPLZ0XAhDtHH/mXKo3zdEST3BqULIoWvFkexaUkI5MLtIdnF5z7nGJWOUwHfJCgc+zeT/3RW65Jt+boSE0SbeZ5apgDNtudCmtQrCom8SfqmDHmC4xcnxLNOdfMN5p1z4+UF+AHEUM6V7tTEUisZMqJDMUSiv95VWdrqfckUDhJz3luXH42X8ukyMCcYGVfhl6r5pjK6pEdbWjHNPlpMVBs97jmljLuv7taj1WvOWumwM2Je1ZJCNOaIdMiMzd/VXF8l+sEn4gO9jEVskI5BY06q [...]
            },
            "metadata_fingerprint": "QqM0M_Jxyn8=",
            "name": "web-server-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.59.123.163",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/personal-409116/global/networks/wordle-network",
                "network_ip": "10.0.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/personal-409116/regions/us-central1/subnetworks/wordle-subnet",
                "subnetwork_project": "personal-409116"
              }
            ],
            "project": "personal-409116",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/personal-409116/zones/us-central1-a/instances/web-server-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "ssh"
            ],
            "tags_fingerprint": "5zt7uq67xS0=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.wordle_network",
            "google_compute_subnetwork.wordle_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250430",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/personal-409116/zones/us-central1-a/disks/web-server-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/personal-409116/zones/us-central1-a/instances/web-server-2",
            "instance_id": "5074304095770451374",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDef/WHSQrQtJYkpAB+gK+dJBrL0sQ9/7fPvPuMiR5AMAM2lxcajNkphTMPHCa5RRvRr/n7bQ7EvdaNu3m+LYC3rpZ1Pq1a57ZgdHVlv4hrm9N8/FcWz7ZIY0edZV54Q5s1v4fAIoVJ8wxAt5GiBIaPLZ0XAhDtHH/mXKo3zdEST3BqULIoWvFkexaUkI5MLtIdnF5z7nGJWOUwHfJCgc+zeT/3RW65Jt+boSE0SbeZ5apgDNtudCmtQrCom8SfqmDHmC4xcnxLNOdfMN5p1z4+UF+AHEUM6V7tTEUisZMqJDMUSiv95VWdrqfckUDhJz3luXH42X8ukyMCcYGVfhl6r5pjK6pEdbWjHNPlpMVBs97jmljLuv7taj1WvOWumwM2Je1ZJCNOaIdMiMzd/VXF8l+sEn4gO9jEVskI5BY06q [...]
            },
            "metadata_fingerprint": "QqM0M_Jxyn8=",
            "name": "web-server-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.71.141.56",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/personal-409116/global/networks/wordle-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/personal-409116/regions/us-central1/subnetworks/wordle-subnet",
                "subnetwork_project": "personal-409116"
              }
            ],
            "project": "personal-409116",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/personal-409116/zones/us-central1-a/instances/web-server-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "ssh"
            ],
            "tags_fingerprint": "5zt7uq67xS0=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.wordle_network",
            "google_compute_subnetwork.wordle_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "wordle_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/personal-409116/global/networks/wordle-network",
            "mtu": 0,
            "name": "wordle-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "personal-409116",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personal-409116/global/networks/wordle-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "wordle_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-05T04:38:26.254-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/personal-409116/regions/us-central1/subnetworks/wordle-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "wordle-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/personal-409116/global/networks/wordle-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "personal-409116",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personal-409116/regions/us-central1/subnetworks/wordle-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.wordle_network"
          ]
        }
      ]
    }
  ]
}